--- a/public/assets/admin/css/style.css
+++ b/public/assets/admin/css/style.css
@@ -53,3 +53,17 @@ p {
 footer.page-footer {
   margin: 0;
 }
+
+.modal.menumodal {
+    max-height: 92%;
+    width:40%;
+    overflow: hidden;
+   
+}
+.modal.mymodal {
+	
+    overflow-x: hidden;
+   
+}
+
+
